--- a/src/test/resources/properties/test_db.properties
+++ b/src/test/resources/properties/test_db.properties
@@ -1,7 +1,8 @@
 test.jdbc.driverClassName=org.h2.Driver
-test.jdbc.url=jdbc:h2:~/test
+test.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 test.jdbc.username=sa
 test.jdbc.password=
 
 test.hibernate.dialect=org.hibernate.dialect.H2Dialect
-test.hibernate.ddl-auto=create
+test.hibernate.hbm2ddl.auto.test=create-drop
+test.hibernate.temp.use_jdbc_metadata_defaults.test=false
